# rasadhi-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.claude-prompts/: lessons-learned.md
.github/workflows/: backend-tests.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  clustering.py  converter.py  health.py  molecule.py  preprocessing.py  similarity.py  splitting.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  clustering.py  common.py  molecule.py  preprocessing.py  similarity.py  splitting.py
backend/app/services/: __init__.py  clustering_service.py  molecule_service.py  preprocessing_service.py  similarity_service.py  splitting_service.py
backend/scripts/: stop-servers.sh
backend/tests/: conftest.py
backend/tests/api/: test_health.py  test_molecule.py
docs/: architecture.md  deployment.md
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/features/clustering/: ClusteringPage.tsx
frontend/src/features/converter/: ConverterPage.tsx
frontend/src/hooks/: useRDKit.ts
frontend/src/lib/: navigation.ts  rdkit.ts
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx
frontend/src/types/: api.ts
(+20 files in other folders)
